komposefiles/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml -o komposefiles/
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml -o komposefiles/
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/airflow-common-network: "true"
        io.kompose.service: app
    spec:
      containers:
        - image: yemoncad/app_airflow:1.0.1
          name: app-streamlit
          ports:
            - containerPort: 8504
          resources: {}
      restartPolicy: Always
status: {}
