komposefiles/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml -o komposefiles/
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  ports:
    - name: "8504"
      port: 8504
      targetPort: 8504
  selector:
    io.kompose.service: app
status:
  loadBalancer: {}
